MiniProjetKubernetes/wp/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wp
spec:
  selector:
    matchLabels:
      app: wp
  replicas: 1
  template:
    metadata:
      labels:
        app: wp
    spec:
      containers:
        - name: wordpress
          image: wordpress:latest
          ports:
            - containerPort: 80
          volumeMounts:
            - name: data-wp-volume
              mountPath: /var/www/html/wp-content/uploads
      volumes:
        - name: data-wp-volume
          hostPath:
            path: /data/wordpress
            type: Directory
