MiniProjetKubernetes/wp/service.yaml
apiVersion: v1
kind: Service
metadata:
   name: wp-service
   namespace: wordpress
spec:
   selector:
      app: wp
   type: ClusterIP
   ports:
      - port: 80
        targetPort: 80
